# my-gpt

./: README.md  eval_prompts.txt  input.txt  pyproject.toml
checkpoints/: bigram.pt  sysml_char_gpt_val1.34.pt  test.pt  test_best.pt  tiny_gpt.pt
data/processed/: train.txt
runs/: eval_sample.txt  test_config.json  test_log.csv  test_log_3.csv
runs/block128_embd128/: best.pt  config.json  eval_samples.txt  last.pt  train_log.csv
runs/block128_embd128_v2/: config.json  eval_samples_t06_k5.txt  train_log.csv
runs/data_pipeline_test/: best.pt  config.json  eval_samples.txt  eval_samples_gpu.txt  last.pt  train_log.csv
runs/exp_001/: best.pt  config.json  last.pt  train_log.csv
src/sysml_gpt/: __init__.py  config.py  data.py  eval_generate.py  generate.py  model.py  prepare_data.py  tokenizer.py  train.py
tests/: test_data.py  test_tokenizer.py
