[project]
name = "sysml-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "which chen", email = "whichchen12@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "torch>=2.12.0",
]

[project.scripts]
sysml-gpt = "sysml_gpt:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
